test/files/neg/t910.check
t910.scala:4: error: type mismatch;
 found   : Seq[Char] (in scala.collection)
 required: Seq[Int]  (in scala.collection.immutable)
    val y: Seq[Int] = rest
                      ^
one error found
